--- a/templates/vinyl/browse.html.twig
+++ b/templates/vinyl/browse.html.twig
@@ -34,6 +34,8 @@
                     <span>{{ mix.trackCount }} Tracks</span>
                     |
                     <span>{{ mix.genre }}</span>
+                    |
+                    <span>{{mix.createdAt|date('y-m-d')}}</span>
                 </div>
             </div>
             {% endfor %}
