create my first api

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>
 			{% block title %}
-				{% trans %}Mixed Vinyl{% endtrans %}
+				{% trans %}Mixes Vinyl{% endtrans %}
 			{% endblock %}
 		</title>
 
@@ -34,6 +34,7 @@
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
+                <a href="#"><img src="{{ asset('img/fr.jpg') }}" alt="fr" width="3%"></a>
 				{# {% for locale in locales %}
 					{% if locale != app.request.locale %}
 						<li class="nav-item">
